[gd_scene load_steps=9 format=3 uid="uid://uj4jlg6xskgq"]

[ext_resource type="FontFile" uid="uid://csd8h5ugta7bj" path="res://SuperPixel-m2L8j.ttf" id="1_mjkpo"]
[ext_resource type="Script" path="res://Menus/troca_personagem.gd" id="1_rk1j3"]
[ext_resource type="Texture2D" uid="uid://24vnbahkc27a" path="res://Spritesheets/gem-1.png" id="3_y4g77"]
[ext_resource type="Script" path="res://Menus/label_3.gd" id="4_qdln6"]

[sub_resource type="Theme" id="Theme_rk3o6"]
default_font = ExtResource("1_mjkpo")
default_font_size = 64
Button/styles/normal = null
Label/styles/normal = null

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ge3yk"]
bg_color = Color(0.6, 0.282353, 0.0980392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o8d0y"]

[sub_resource type="SystemFont" id="SystemFont_xokvq"]

[node name="troca_personagem" type="Node2D"]
script = ExtResource("1_rk1j3")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
theme = SubResource("Theme_rk3o6")
theme_override_styles/panel = SubResource("StyleBoxFlat_ge3yk")
metadata/_edit_use_anchors_ = true

[node name="Foxy" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.152778
anchor_top = 0.0617284
anchor_right = 0.152778
anchor_bottom = 0.0617284
offset_left = 32.0
offset_top = 216.0
offset_right = 336.0
offset_bottom = 344.0
text = "Foxy"
metadata/_edit_use_anchors_ = true

[node name="Bunny-Habilitado" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = -0.15191
anchor_top = 0.0617284
anchor_right = -0.15191
anchor_bottom = 0.0617284
offset_left = 815.0
offset_top = 216.0
offset_right = 1119.0
offset_bottom = 344.0
disabled = true
text = "Bunny"
metadata/_edit_use_anchors_ = true

[node name="Bunny-Desabilitado" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.15191
anchor_top = 0.0617284
anchor_right = -0.15191
anchor_bottom = 0.0617284
offset_left = 815.0
offset_top = 216.0
offset_right = 1119.0
offset_bottom = 344.0
theme_override_styles/normal = SubResource("StyleBoxFlat_o8d0y")
text = "5 Gemas"
metadata/_edit_use_anchors_ = true

[node name="Voltar" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 427.0
offset_top = 448.0
offset_right = 731.0
offset_bottom = 576.0
text = "Voltar
"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -356.5
offset_top = 39.0
offset_right = 356.5
offset_bottom = 129.0
grow_horizontal = 2
text = "ENDLESS RUNNER"
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 296.0
offset_top = 176.0
offset_right = 864.0
offset_bottom = 241.0
theme_override_fonts/font = ExtResource("1_mjkpo")
theme_override_font_sizes/font_size = 32
text = "Escolha seu personagem"

[node name="Gem-1" type="Sprite2D" parent="Panel"]
position = Vector2(1000, 72)
scale = Vector2(3, 3)
texture = ExtResource("3_y4g77")

[node name="Label3" type="Label" parent="Panel"]
offset_left = 1024.0
offset_top = 24.0
offset_right = 1136.0
offset_bottom = 112.0
theme_override_fonts/font = SubResource("SystemFont_xokvq")
theme_override_font_sizes/font_size = 36
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("4_qdln6")

[connection signal="pressed" from="Panel/Foxy" to="." method="_on_foxy_pressed"]
[connection signal="pressed" from="Panel/Bunny-Habilitado" to="." method="_on_bunny_pressed"]
[connection signal="pressed" from="Panel/Bunny-Desabilitado" to="." method="_on_bunny_desabilitado_pressed"]
[connection signal="pressed" from="Panel/Voltar" to="." method="_on_voltar_pressed"]
